# src/app/survey-results/response-list/response-details/response-details.component.ts
@@ -1,0 +1,17 @@
+import { Component, OnInit, Input } from '@angular/core';
+import { SurveyResponsesService, SurveyResponseDetailsDto } from 'src/app/generated-api-client';
+
+@Component({
+  selector: 'app-response-details',
+  templateUrl: './response-details.component.html',
+  styleUrls: ['./response-details.component.scss']
+})
+export class ResponseDetailsComponent implements OnInit {
+
+  @Input() response: SurveyResponseDetailsDto;
+  constructor() { }
+
+  ngOnInit(): void {
+  }
+
+}
