# swagger.json
@@ -61,7 +61,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/SurveyResponseDetailsDto"
+                    "$ref": "#/components/schemas/SurveyResponseListItemDto"
                   }
                 }
               },
@@ -69,7 +69,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/SurveyResponseDetailsDto"
+                    "$ref": "#/components/schemas/SurveyResponseListItemDto"
                   }
                 }
               },
@@ -77,7 +77,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/SurveyResponseDetailsDto"
+                    "$ref": "#/components/schemas/SurveyResponseListItemDto"
                   }
                 }
               }
@@ -125,6 +125,46 @@
               "text/json": {
                 "schema": {
                   "$ref": "#/components/schemas/SurveyResponseDto"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/SurveyResponses/details/{id}": {
+      "get": {
+        "tags": [
+          "SurveyResponses"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/SurveyResponseDetailsDto"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SurveyResponseDetailsDto"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SurveyResponseDetailsDto"
                 }
               }
             }
@@ -214,7 +254,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/SurveyResponseDetailsDto"
+                    "$ref": "#/components/schemas/SurveyResponseListItemDto"
                   }
                 }
               },
@@ -222,7 +262,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/SurveyResponseDetailsDto"
+                    "$ref": "#/components/schemas/SurveyResponseListItemDto"
                   }
                 }
               },
@@ -230,7 +270,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/SurveyResponseDetailsDto"
+                    "$ref": "#/components/schemas/SurveyResponseListItemDto"
                   }
                 }
               }
@@ -291,14 +331,6 @@
             "schema": {
               "type": "string",
               "default": "",
-              "nullable": true
-            }
-          },
-          {
-            "name": "active",
-            "in": "query",
-            "schema": {
-              "type": "boolean",
               "nullable": true
             }
           },
@@ -932,6 +964,41 @@
   },
   "components": {
     "schemas": {
+      "SurveyResponseListItemDto": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          },
+          "respondentId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "surveyName": {
+            "type": "string",
+            "nullable": true
+          },
+          "respondent": {
+            "type": "string",
+            "nullable": true
+          },
+          "date": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "creator": {
+            "type": "string",
+            "nullable": true
+          },
+          "courseName": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
       "QuestionType": {
         "enum": [
           "Text",
@@ -963,6 +1030,28 @@
             "$ref": "#/components/schemas/QuestionType"
           },
           "questionId": {
+            "type": "integer",
+            "format": "int32"
+          }
+        },
+        "additionalProperties": false
+      },
+      "SurveyResponseDto": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          },
+          "answers": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/AnswerDto"
+            },
+            "nullable": true
+          },
+          "surveyId": {
             "type": "integer",
             "format": "int32"
           }
@@ -1006,28 +1095,6 @@
           },
           "courseName": {
             "type": "string",
-            "nullable": true
-          },
-          "surveyId": {
-            "type": "integer",
-            "format": "int32"
-          }
-        },
-        "additionalProperties": false
-      },
-      "SurveyResponseDto": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
-          "answers": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/AnswerDto"
-            },
             "nullable": true
           },
           "surveyId": {
